@@ -598,8 +598,6 @@ deprecated_pc_in_call_dummy_at_entry_point (CORE_ADDR pc, CORE_ADDR sp,
 					    CORE_ADDR frame_address)
 {
   CORE_ADDR addr = entry_point_address ();
-  if (DEPRECATED_CALL_DUMMY_ADDRESS_P ())
-    addr = DEPRECATED_CALL_DUMMY_ADDRESS ();
   return ((pc) >= addr && (pc) <= (addr + DECR_PC_AFTER_BREAK));
 }
 
